# template_onion_with_mqtt/server/Api.Rest/Controllers/WeatherStationController.cs
@@ -1,6 +1,7 @@
 using Application.Interfaces;
 using Application.Interfaces.Infrastructure.Postgres;
 using Application.Interfaces.Infrastructure.Websocket;
+using Application.Models.Dtos;
 using Core.Domain.Entities;
 using Microsoft.AspNetCore.Mvc;
 
@@ -27,10 +28,10 @@ public class WeatherStationController(
     public const string SubscribeToLiveChangesRoute = nameof(SubscribeToLiveChanges);
     [HttpPost]
     [Route(SubscribeToLiveChangesRoute)]
-    public async Task<ActionResult> SubscribeToLiveChanges([FromHeader] string authorization, [FromBody]string clientId)
+    public async Task<ActionResult> SubscribeToLiveChanges([FromHeader] string authorization, [FromBody]SubscribeToTopicDto dto)
     {
         securityService.VerifyJwtOrThrow(authorization);
-        await connectionManager.AddToTopic("dashboard", clientId);
+        await connectionManager.AddToTopic(dto.Topic, dto.ClientId);
         return Ok();
     }
 }
